fixed overflow problem

--- a/css/stylesheetv1.css
+++ b/css/stylesheetv1.css
@@ -5,6 +5,7 @@
 body, html {
   height: 100%;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .container-full {
@@ -102,7 +103,7 @@ body, html {
 
 #second-page {
   background-color: #EE6457;
-  padding: 100px 0;
+  padding: 20vh 0;
 }
 
 #second-page #mango h1 {
