--- a/sass/mySass.scss
+++ b/sass/mySass.scss
@@ -5,6 +5,7 @@
 body, html{
 	height: 100%;
 	min-height: 100%;
+	overflow-x: hidden;
 
 }
 
@@ -157,7 +158,8 @@ margin-right: auto;
 
 	background-color: $color-two;
 	//height: 100%;
-	padding: 100px 0;
+	padding: 20vh 0;
+	
 
 	
 
